Fixed Nested Content Umbraco 7.4 layout issues manually: https://github.com/leekelleher/umbraco-nested-content/pull/60

--- a/Sources/24days/App_Plugins/NestedContent/Css/nestedcontent.css
+++ b/Sources/24days/App_Plugins/NestedContent/Css/nestedcontent.css
@@ -167,11 +167,6 @@
     margin-left: 10px;
 }
 
-.form-horizontal .nested-content .control-label 
-{
-    width: 30%;
-}
-
 .form-horizontal .nested-content .controls-row 
 {
     margin-left: 40% !important;
